# automate

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  404.html  LICENSE  README.md  automate.yml  config.ini  config.yml  env.csh  env.sh  index.html  mkdocs.yml  mypy.ini  pydoc-markdown.yml  pydocmd.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  setup.sh  sitemap.xml  tasks.py  vendorize.toml
.github/workflows/: publish_documentation.yml
api-documentation/boards/: index.html
api-documentation/builders/cmake/: index.html
api-documentation/builders/kernel/: index.html
api-documentation/builders/make/: index.html
api-documentation/builders/spec/: index.html
api-documentation/cross-compilers/: index.html
api-documentation/database-integration/: index.html
api-documentation/model/: index.html
api-documentation/utilities/: index.html
automate/: __init__.py  board.py  compiler.py  config.py  context.py  executor.py  loader.py  locks.py  main.py  utils.py
automate/builder/: builder.py  cmake.py  kernel.py  make.py
automate/database/: database.py
automate/database/queries/: init_database.sql  select_all_boards.sql  select_lock_for_board.sql
automate/model/: __init__.py  board.py  common.py  compiler.py  config.py  data.py  metadata.py  model_base.py  user.py  utils.py
automate/tasks/: __init__.py  admin.py  board.py  cmake.py  common.py  compiler.py  database.py  kernel.py  make.py
automate/tools/: base.py  list.py
automate/utils/: __init__.py  appdirs.py  cpuinfo.py  cpuinfo_arm.py  kernel.py  network.py  uboot.py
commandline-interface/automate/: index.html
commandline-interface/automate-run/: index.html
configuration/: index.html
development/: index.html
docs/: boards.md  commandline.md  commandline_automate.md  commandline_run.md  configuration.md  database.md  development.md  gateway.md  index.md  model.md
examples/python/hello/: autofile.py
examples/python/hello/hello/: Makefile  hello.c
examples/python/helpers/: README.md  autofile.py
examples/python/say_hello/: autofile.py
examples/python/test_compilers/: autofile.py
examples/python/test_compilers/hello_compilers/: Makefile  hello.cpp
examples/shell/dhrystone/: dhry.h  dhry_1.c  run.sh
examples/shell/hello/: README.md  run.sh
examples/shell/hello_cmake/: CMakeLists.txt  run.sh
examples/shell/hello_cmake/Hello/: CMakeLists.txt
examples/shell/hello_cmake/hello/: CMakeLists.txt
examples/shell/hello_make/: run.sh
examples/shell/hello_make/hello_make/: Makefile  hello.c
examples/shell/kernel/: README.md  run.sh
examples/shell/kexec/: run.sh
examples/shell/llvm-testsuite/: run.sh
examples/shell/llvm-testsuite/patch/: gcc_compat.patch
examples/shell/opencv/: .gitignore  run.sh
examples/shell/perf_events/: run.sh
examples/shell/perf_events/perf_events/: Makefile  perf_events.c
metadata/: users.yml
metadata-model/: index.html
metadata/boards/jetson_agx_xavier/: description.yml
metadata/boards/jetson_tx2/: description.yml
metadata/boards/jetson_tx2/kernel/: config
metadata/boards/raspberrypi4b-jh1/: description.yml  notes.md
metadata/boards/raspberrypi4b-jh1/kernel/: default_config
metadata/boards/zynqberry/: description.yml
metadata/boards/zynqberry/kernel/: config
metadata/compiler/aarch32/gcc-8.2-arm-linux-gnueabi/: description.yml
metadata/compiler/aarch32/gcc-8.2-arm-linux-gnueabihf/: description.yml
metadata/compiler/clang/clang8/: description.yml
metadata/compilers/aarch32/gcc-7.4.1-arm-linux-gnueabihf/: description.yml
metadata/compilers/aarch32/gcc-8.2-arm-linux-gnueabi/: description.yml
scripts/: create_postgres_db.sh  create_postgres_testdb.sh  setup.sql
search/: search_index.json
setup/boards/: index.html
setup/database/: index.html
setup/gateway/: index.html
test/: fake_board.py  test_board.py  test_compiler.py  test_config.ini  test_config.py  test_config.yml  test_cpuinfo.py  test_database.py  test_model.py  test_tasks.py  test_utils.py
test/integration/: db.py  test_database.py  test_lock_manager.py
test/src/metadata/: users.yml
test/unit/: fake_board.py  monkeypatch_state.py  test_board.py  test_compiler.py  test_cpuinfo.py  test_main.py  test_model.py  test_monkeypatch_state.py  test_simple_locks.py  test_tasks.py  test_utils.py  test_utils_network.py  test_version_string.py
test/unit/fake_board_data/: test_id_rsa  test_id_rsa.pub
test/unit/src/: cpuinfo_unknown.txt  hello.c
tools/: automate
(+39 files in other folders)
