[tool.poetry]
name = "automate"
version = "0.0.1"
description = ""
authors = ["Christoph Gerum <christoph.gerum@uni-tuebingen.de>"]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.2"
"ruamel.yaml" = "^0.16.6"
coloredlogs = "^10.0"
tabulate = "^0.8.6"
invoke = "^1.3"
fabric = "^2.5"
patchwork = "^1.0"
prompt_toolkit = "^3.0"
requests = "^2.22"
python-dotenv = {version = "^0.10.5", optional = true}
psycopg2 = {version = "^2.8.4", optional = true}
pydot = {version = "^1.4.1", optional = true}
jinjasql = {version = "^0.1.7", optional = true}

[tool.poetry.extras]
postgres = ["python-dotenv", "pydot", "psycopg2", "jinjasql"]

[tool.poetry.dev-dependencies]
mypy = "^0.740.0"
typeshed = "^0.0.1"
pre-commit = "^2.0.1"
pydoc-markdown = "^2.0.5"
pytest = "^5.3"
pytest-cov = "^2.8"
pytest-monkeytype = "^1.0"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
mkdocs-material = "^4.5"
pygments = "^2.5"
coverage = {version = "^4.5", extras = ["toml"]}
mock-ssh-server = "^0.8.0"
isort = {version = "^4.3", extras = ["pyproject"]}
pylint = "^2.4"
snakeviz = "^2.0.1"


[tool.poetry.scripts]
automate = 'automate.main:program.run'
automate-run = 'automate.main:program_run.run'

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=80


[tool.pylint]
disable = "arguments-differ"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


